kubernetes/picsur/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picsur
  namespace: picsur
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: picsur
  template:
    metadata:
      labels:
        app.kubernetes.io/name: picsur
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-wk-0
      containers:
        - name: picsur
          image: ghcr.io/caramelfur/picsur-alpha:0.5.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
