kubernetes/picsur/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picsur-postgres
  namespace: picsur
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: picsur-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
