kubernetes/picsur/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picsur
  namespace: picsur
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: picsur
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
