kubernetes/picsur/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: picsur
  namespace: picsur
spec:
  ingressClassName: nginx
  rules:
    - host: picsur.nodadyoushutup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: picsur
                port:
                  number: 8080
